course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cloudstudents
  name: deployment-course-amarnath
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-course-amarnath
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-course-amarnath
    spec:
      containers:
      - name: app-course-amarnath
        image: 991524241826.dkr.ecr.ap-south-2.amazonaws.com/course-amar:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: cloudstudents
  name: service-course-amarnath
spec:
  selector:
    app.kubernetes.io/name: app-course-amarnath
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cloudstudents
  name: ingress-course-amarnath
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: students-app
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /courses
          pathType: Prefix
          backend:
            service:
              name: service-course-amarnath
              port:
                number: 3001
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: service-course-amarnath
              port:
                number: 3001
